--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,14 +18,22 @@
     "@mui/x-data-grid": "^6.18.1",
     "@react-pdf/renderer": "^3.1.14",
     "@tanstack/react-query": "^4.36.1",
+    "@types/jwt-decode": "^2.2.1",
     "axios": "^1.6.2",
     "chart.js": "^4.4.9",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.19.0",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "react-grid-layout": "^1.3.4",
+    "react-resizable": "^3.0.5",
+    "clsx": "^2.1.1",
+    "tailwindcss": "^3.4.4",
+    "postcss": "^8.4.34",
+    "autoprefixer": "^10.4.19"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
