Make backend API production-ready with security, monitoring, and deployment configurations

--- a/auth-backend/.env
+++ b/auth-backend/.env
@@ -1,29 +1,27 @@
-# Database Configuration
-# Option 1: Local PostgreSQL (requires PostgreSQL installed)
-# DATABASE_URL=postgresql://username:password@localhost:5432/stratosys_db
-
-# Option 2: Supabase (recommended for development)
-# Get your connection string from: https://supabase.com/dashboard/project/YOUR_PROJECT/settings/database
-# DATABASE_URL=postgresql://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-REF].supabase.co:5432/postgres
-
-# Option 3: Docker PostgreSQL (if using docker-compose)
-DATABASE_URL=postgresql://postgres:password@localhost:5432/stratosys_db
-
-# JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-JWT_REFRESH_SECRET=your-super-secret-refresh-jwt-key-change-this-in-production
-
-# Server Configuration
+﻿# Server Configuration
 PORT=4000
 NODE_ENV=development
-CORS_ORIGIN=http://localhost:3002
 
-# Email Configuration (for password reset, etc.)
+# Database Configuration
+DATABASE_URL=postgresql://username:password@localhost:5432/auth_database
+
+# JWT Configuration
+JWT_ACCESS_SECRET=your-jwt-access-secret-change-this
+JWT_REFRESH_SECRET=your-jwt-refresh-secret-change-this
+
+# Email Configuration
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=your-email@gmail.com
 SMTP_PASS=your-app-password
+EMAIL_FROM=your-email@gmail.com
 
-# Rate Limiting
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
+# Frontend URL
+FRONTEND_URL=http://localhost:3000
+
+# CORS Configuration
+CORS_ORIGIN=http://localhost:3000
+
+# Google OAuth (if using)
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
