--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,30 +1,76 @@
+# Core Flask Framework
 flask>=2.3.0
 flask-restful>=0.3.10
 flask-sqlalchemy>=3.0.0
 flask-migrate>=4.0.0
 flask-cors>=4.0.0
+flask-jwt-extended>=4.6.0
+flask-limiter>=3.5.0
+
+# Database
 psycopg2-binary>=2.9.0
 redis>=4.5.0
+
+# Task Queue
 celery>=5.3.0
+
+# API and Web Framework
 fastapi>=0.100.0
 uvicorn>=0.22.0
+
+# Authentication and Security
 python-jose>=3.3.0
 pyjwt>=2.7.0
+cryptography>=41.0.0
+
+# Email and Communication
 sendgrid>=6.10.0
+
+# Google Services
 google-cloud-storage>=2.10.0
 google-api-python-client>=2.0.0
 google-auth>=2.0.0
+
+# Document Processing
 pypdf2>=3.0.0
 reportlab>=4.0.0
+python-docx>=0.8.11
+docxtpl>=0.16.7
 pillow>=10.0.0
-pytest>=7.4.0
-python-dotenv>=1.0.0
-requests>=2.31.0
+
+# AI and Data Processing
 openai>=1.0.0
 pandas>=2.0.0
 numpy>=1.24.0
-python-socketio>=5.8.0
 llama-cpp-python>=0.2.0
-flask-jwt-extended>=4.6.0
-python-docx>=0.8.11
-docxtpl>=0.16.7
+
+# Real-time Communication
+python-socketio>=5.8.0
+
+# Testing
+pytest>=7.4.0
+pytest-flask>=1.3.0
+pytest-cov>=4.1.0
+
+# Environment and Configuration
+python-dotenv>=1.0.0
+
+# HTTP Client
+requests>=2.31.0
+
+# Production and Monitoring
+gunicorn>=21.2.0
+sentry-sdk>=1.40.0
+prometheus-client>=0.17.0
+structlog>=23.1.0
+
+# Security
+bcrypt>=4.0.0
+passlib>=1.7.4
+
+# Utilities
+click>=8.1.0
+itsdangerous>=2.1.0
+jinja2>=3.1.0
+markupsafe>=2.1.0
+werkzeug>=2.3.0
