update test only not for development

--- a/auth-backend/.env
+++ b/auth-backend/.env
@@ -1,9 +1,9 @@
-﻿# Server Configuration
-PORT=4000
+# Server Configuration
+PORT=5000
 NODE_ENV=development
 
 # Database Configuration
-DATABASE_URL=postgresql://username:password@localhost:5432/auth_database
+DATABASE_URL=postgresql://postgres.kprvqvugkggcpqwsisnz:PVZ7fDwh8wsQWmjk@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres
 
 # JWT Configuration
 JWT_ACCESS_SECRET=your-jwt-access-secret-change-this
@@ -17,10 +17,10 @@ SMTP_PASS=your-app-password
 EMAIL_FROM=your-email@gmail.com
 
 # Frontend URL
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:3002
 
 # CORS Configuration
-CORS_ORIGIN=http://localhost:3000
+CORS_ORIGIN=http://localhost:3002
 
 # Google OAuth (if using)
 GOOGLE_CLIENT_ID=your-google-client-id
