--- a/auth-backend/.env
+++ b/auth-backend/.env
@@ -17,7 +17,7 @@ SMTP_PASS=your-app-password
 EMAIL_FROM=your-email@gmail.com
 
 # Frontend URL
-FRONTEND_URL=http://localhost:3002
+CORS_ORIGIN=http://localhost:5173
 
 # CORS Configuration
 CORS_ORIGIN=http://localhost:3002
