--- a/auth-backend/.env
+++ b/auth-backend/.env
@@ -25,3 +25,7 @@ CORS_ORIGIN=http://localhost:3002
 # Google OAuth (if using)
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
+#git ignore
+# Environment variables for the frontend
+VITE_API_URL=http://localhost:5000/api
+VITE_AUTH_URL=http://localhost:5000/auth
