feat: Add enhanced dashboard components and utilities
- Implemented enhanced theme in src/theme/index.ts
- Created TypeScript definitions for enhanced dashboard in src/types/enhanced.d.ts
- Developed accessibility utilities in src/utils/accessibility.ts
- Added performance monitoring utilities in src/utils/performance.ts
- Created custom hook for dashboard functionality in src/hooks/useDashboardEnhanced.ts
- Set up enhanced Form Builder Admin exports in src/pages/FormBuilderAdmin/index.ts
- Added setup scripts for enhanced dashboard in setup-enhanced-dashboard.ps1 and setup-enhanced-dashboard.sh
- Implemented user profile testing script in test_user_profile.py

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -37,6 +37,7 @@ reportlab>=4.0.0
 python-docx>=0.8.11
 docxtpl>=0.16.7
 pillow>=10.0.0
+qrcode[pil]>=7.4.0
 
 # AI and Data Processing
 openai>=1.0.0
