--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,11 +19,13 @@
     "@react-pdf/renderer": "^3.1.14",
     "@tanstack/react-query": "^4.36.1",
     "@types/jwt-decode": "^2.2.1",
+    "@types/lodash": "^4.17.20",
     "autoprefixer": "^10.4.19",
     "axios": "^1.10.0",
     "chart.js": "^4.4.9",
     "clsx": "^2.1.1",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.34",
     "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
