--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
     "@supabase/supabase-js": "^2.50.5",
     "@types/dompurify": "^3.0.5",
     "@types/jwt-decode": "^2.2.1",
+    "chart.js": "^4.5.0",
     "dompurify": "^3.2.6",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "qrcode.react": "^4.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-google-picker": "^0.1.0",
     "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.17.20"
   }
 }
