--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "postcss": "^8.4.34",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
