Add test script for Enhanced Template Optimization and sample Excel data
- Created `test_enhanced_template.py` to test the new template optimization service.
- Implemented functions to generate sample Excel data and a LaTeX template.
- Added a test function to analyze the template and Excel data using the `TemplateOptimizerService`.
- Included a demonstration of API endpoints for template optimization and report generation.
- Added a sample Excel file `test_simple.xlsx` for testing purposes.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -39,11 +39,19 @@ docxtpl>=0.16.7
 pillow>=10.0.0
 qrcode[pil]>=7.4.0
 
+# Excel Processing
+openpyxl>=3.1.0
+xlrd>=2.0.0
+xlsxwriter>=3.1.0
+
 # AI and Data Processing
 openai>=1.0.0
 pandas>=2.0.0
 numpy>=1.24.0
 llama-cpp-python>=0.2.0
+
+# LaTeX Processing (optional)
+# pylatex>=1.4.0
 
 # Real-time Communication
 python-socketio>=5.8.0
