Add comprehensive tests and validations for form management system
- Introduced TypeScript interfaces for form management in forms.ts
- Created quick test scripts to validate public forms and 500 error fixes
- Developed extensive validation tests for backend and frontend integration
- Implemented date handling tests for external forms
- Verified Google OAuth setup with detailed checks for configuration
- Enhanced error handling and logging across various test scripts

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -25,6 +25,7 @@ cryptography>=41.0.0
 
 # Email and Communication
 sendgrid>=6.10.0
+twilio>=8.0.0
 
 # Google Services
 google-cloud-storage>=2.10.0
