--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,12 +26,14 @@
     "clsx": "^2.1.1",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.533.0",
     "postcss": "^8.4.34",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.8",
     "react-google-picker": "^0.1.0",
     "react-grid-layout": "^1.3.4",
     "react-hook-form": "^7.48.2",
