--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@supabase/supabase-js": "^2.50.5",
     "@types/dompurify": "^3.0.5",
     "@types/jwt-decode": "^2.2.1",
+    "axios": "^1.11.0",
     "chart.js": "^4.5.0",
     "dompurify": "^3.2.6",
     "jwt-decode": "^4.0.0",
