Refactors backend for enhanced form processing
Updates environment variables in Dockerfile to support development mode, adds dependencies for report generation, and streamlines directory creation and permissions.

Enhances form processing by introducing new models for QR codes and access codes, improving submission handling, and enabling automated report generation.

Integrates AI-driven analysis for form data insights and trends, adds dynamic form creation from templates, and improves error handling.

Fixes cookie security settings and adds additional logging for better debugging.

Relates to improved scalability and feature enhancements.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,11 +2,10 @@
 FROM python:3.11-slim
 
 # Set environment variables
-ENV PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1 \
-    PYTHONPATH=/app \
-    FLASK_ENV=production \
-    FLASK_APP=wsgi.py
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+ENV FLASK_APP=app
+ENV FLASK_ENV=development
 
 # Set work directory
 WORKDIR /app
@@ -17,25 +16,34 @@ RUN apt-get update \
         build-essential \
         libpq-dev \
         curl \
+        git \
         && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
 COPY requirements.txt .
-RUN pip install --no-cache-dir --upgrade pip \
-    && pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Create non-root user for security
-RUN groupadd -r appuser && useradd -r -g appuser appuser
+# Install additional dependencies for report generation
+RUN pip install --no-cache-dir \
+    matplotlib \
+    seaborn \
+    python-docx \
+    pandas \
+    openpyxl \
+    xlsxwriter \
+    pillow \
+    qrcode[pil] \
+    reportlab \
+    python-socketio
 
-# Copy application code
+# Copy project
 COPY . .
 
 # Create necessary directories
-RUN mkdir -p logs uploads static/generated \
-    && chown -R appuser:appuser /app
+RUN mkdir -p /app/static/charts /app/static/reports /app/uploads
 
-# Switch to non-root user
-USER appuser
+# Set permissions
+RUN chmod +x /app/run.py
 
 # Expose port
 EXPOSE 5000
@@ -44,5 +52,5 @@ EXPOSE 5000
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:5000/health || exit 1
 
-# Run the application with Gunicorn
-CMD ["gunicorn", "--config", "gunicorn.conf.py", "wsgi:application"] 
+# Run the application
+CMD ["python", "run.py"] 
