--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -48,6 +48,9 @@ xlsxwriter>=3.1.0
 # AI and Data Processing
 openai>=1.0.0
 pandas>=2.0.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+numpy>=1.24.0
 numpy>=1.24.0
 llama-cpp-python>=0.2.0
 
