--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -81,6 +81,9 @@ sentry-sdk>=1.40.0
 prometheus-client>=0.17.0
 structlog>=23.1.0
 
+# AI and Machine Learning
+google-generativeai>=0.3.0
+
 # Security
 bcrypt>=4.0.0
 passlib>=1.7.4
