--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,10 +35,15 @@
         "chart.js": "^4.4.9",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
+        "docxtemplater": "^3.65.3",
+        "file-saver": "^2.0.5",
         "jwt-decode": "^4.0.0",
         "lodash": "^4.17.21",
         "lodash-es": "^4.17.21",
         "lucide-react": "^0.533.0",
+        "mammoth": "^1.10.0",
+        "monaco-editor": "^0.52.2",
+        "pizzip": "^3.2.0",
         "postcss": "^8.4.34",
         "qrcode": "^1.5.4",
         "qrcode.react": "^4.2.0",
@@ -49,6 +54,7 @@
         "react-google-picker": "^0.1.0",
         "react-grid-layout": "^1.3.4",
         "react-hook-form": "^7.48.2",
+        "react-monaco-editor": "^0.59.0",
         "react-resizable": "^3.0.5",
         "react-router-dom": "^6.19.0",
         "recharts": "^3.1.2",
